--- a/index.html
+++ b/index.html
@@ -15,22 +15,19 @@
         <a-entity id="mouseCursor" cursor="rayOrigin: mouse" raycaster="objects: .raycastable"> </a-entity>
 
         <a-assets timeout="10000">
-            <a-asset-item id="daiwa" src="assets/kingyodaiwa.glb"></a-asset-item>
-            <a-asset-item id="cube" src="assets/cube.glb"></a-asset-item>
-            <a-asset-item id="apple" src="assets/apple.glb"></a-asset-item>
-            <a-asset-item id="castle" src="assets/test02.glb"></a-asset-item>
+            <a-asset-item id="apple" src="apple.glb" scale="1 1 1"></a-asset-item>
         </a-assets>>
 
+      <!-- マーカーを設定する -->
         <a-marker type="pattern" url="armarker.patt">
         <!-- クリックしたいentityグループ -->
-        <a-entity position="0 0.5 -3" rotation="0 0 0" scale="1 1 1"
-            animation__rotation="property:  rotation;    to: 0 360 0;   dur: 4000; easing: linear; loop: true; startEvents: mouseup">
+          <a-entity position="0 0.5 -3" rotation="0 0 0" scale="1 1 1" animation__rotation="property:  rotation;    to: 0 360 0;   dur: 4000; easing: linear; loop: true; startEvents: mouseup">
             <!-- 3Dモデル -->
             <a-entity gltf-model="#apple" position="0 0 0" rotation="0 -9 0 " scale="5 5 5"></a-entity>
             <!-- 当たり判定オブジェクト -->
             <a-entity position="0 -0.5 0" hit-box>
-                <a-entity class="raycastable" geometry="primitive:cylinder" material="color:red; opacity: 0.5"
-                    scale="0.27 0.5 0.27" position="0 0.73 0" visible="false"></a-entity>
+                <a-entity class="raycastable" geometry="primitive:cylinder" material="color:red; opacity: 0.5" scale="0.27 0.5 0.27" position="0 0.73 0" visible="false">
+                </a-entity>
         </a-marker>
 
         <a-entity camera></a-entity>
