--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
       <!-- マーカーを設定する -->
         <a-marker type="pattern" url="armarker.patt">
         <!-- クリックしたいentityグループ -->
-          <a-entity position="0 0.5 -3" rotation="0 0 0" scale="1 1 1" animation__rotation="property:  rotation;    to: 0 360 0;   dur: 4000; easing: linear; loop: true; startEvents: mouseup">
+          <a-entity rotation="0 0 0" scale="1 1 1" animation__rotation="property:  rotation;    to: 0 360 0;   dur: 4000; easing: linear; loop: true; startEvents: mouseup">
             <!-- 3Dモデル -->
-            <a-entity gltf-model="#apple" position="0 0 0" rotation="0 -9 0 " scale="5 5 5"></a-entity>
+            <a-entity gltf-model="#apple" rotation="0 -9 0 " scale="5 5 5"></a-entity>
             <!-- 当たり判定オブジェクト -->
-            <a-entity position="0 -0.5 0" hit-box>
-                <a-entity class="raycastable" geometry="primitive:cylinder" material="color:red; opacity: 0.5" scale="0.27 0.5 0.27" position="0 0.73 0" visible="false">
+            <a-entity hit-box>
+                <a-entity class="raycastable" geometry="primitive:cylinder" material="color:red; opacity: 0.5" scale="0.27 0.5 0.27" visible="true">
                 </a-entity>
         </a-marker>
 
