--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
       <!-- マーカーを設定する -->
         <a-marker type="pattern" url="armarker.patt">
         <!-- クリックしたいentityグループ -->
-          <a-entity rotation="0 -90 90" scale="1 1 1" animation__rotation="property:  rotation;    to: 0 270 90;   dur: 4000; easing: linear; loop: true; startEvents: mouseup">
+          <a-entity rotation="0 -90 90" scale="1 1 1" animation__rotation="property:  rotation;    to: 0 -90 450;   dur: 4000; easing: linear; loop: true; startEvents: mouseup">
             <!-- 3Dモデル -->
-            <a-entity gltf-model="#apple" rotation="0 -9 0 " scale="5 5 5"></a-entity>
+            <a-entity gltf-model="#apple" rotation="0 0 0 " scale="5 5 5"></a-entity>
             <!-- 当たり判定オブジェクト -->
             <a-entity hit-box>
-                <a-entity class="raycastable" geometry="primitive:box" material="color:red; opacity: 0.5" scale="1 0.1 1" visible="true">
+                <a-entity class="raycastable" geometry="primitive:box" material="color:red; opacity: 0.5" rotation="0 -90 0" scale="1 0.01 1" visible="true">
                 </a-entity>
         </a-marker>
 
