--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <!-- 3Dモデル -->
             <a-entity gltf-model="#apple" rotation="0 0 0 " scale="5 5 5"></a-entity>
             <!-- 当たり判定オブジェクト -->
-            <a-entity hit-box>
-                <a-entity class="raycastable" position"10 0 0" geometry="primitive:box" material="color:red; opacity: 0.5" rotation="0 0 90" scale="1 0.05 1" visible="true">
+            <a-entity hit-box position"-3 0 0">
+                <a-entity class="raycastable" position"0 0 0" geometry="primitive:box" material="color:red; opacity: 0.5" rotation="0 0 90" scale="1 0.05 1" visible="true">
                 </a-entity>
         </a-marker>
 
