--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
         <a-assets timeout="10000">
             <a-asset-item id="apple" src="apple.glb" scale="1 1 1"></a-asset-item>
+            <a-asset-item id="daiwa" src="kingyodaiwa.glb" scale="1 1 1"></a-asset-item>
         </a-assets>>
 
       <!-- マーカーを設定する -->
@@ -25,11 +26,24 @@
             <!-- 3Dモデル -->
             <a-entity gltf-model="#apple" rotation="0 0 0 " scale="5 5 5"></a-entity>
             <!-- 当たり判定オブジェクト -->
-            <a-entity hit-box position"-3 0 0">
-                <a-entity class="raycastable" position"0 0 0" geometry="primitive:box" material="color:red; opacity: 0.5" rotation="0 0 90" scale="1 0.05 1" visible="true">
+            <a-entity hit-box>
+                <a-entity class="raycastable" position"0 0 0" geometry="primitive:box" material="color:red; opacity: 0.5" rotation="0 0 90" scale="2 0.05 2" visible="true">
                 </a-entity>
         </a-marker>
 
+               <!-- マーカーを設定する -->
+        <a-marker type="pattern" url="snow.patt">
+        <!-- クリックしたいentityグループ -->
+          <a-entity rotation="-90 0 0" scale="1 1 1" animation__rotation="property:  rotation;    to: -450 0 0;   dur: 4000; easing: linear; loop: true; startEvents: mouseup">
+            <!-- 3Dモデル -->
+            <a-entity gltf-model="#daiwa" rotation="0 0 0 " scale="5 5 5"></a-entity>
+            <!-- 当たり判定オブジェクト -->
+            <a-entity hit-box>
+                <a-entity class="raycastable" position"0 0 0" geometry="primitive:box" material="color:red; opacity: 0.5" rotation="0 0 90" scale="2 0.05 2" visible="true">
+                </a-entity>
+        </a-marker>
+
+              
         <a-entity camera></a-entity>
     </a-scene>
 </body>
